rustdocs/errors/rust-bitcoin-primitives-src-hash_types-generic.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/primitives/src/hash_types/generic.rs:29:1
   |
29 | super::impl_bytelike_traits!(HashType, LEN);
   | ^^^^^ there are too many leading `super` keywords

error[E0425]: cannot find type `Inner` in this scope
  --> ../rust-bitcoin/primitives/src/hash_types/generic.rs:10:21
   |
10 | const LEN: usize = <Inner as hashes::Hash>::LEN;
   |                     ^^^^^ not found in this scope

error[E0425]: cannot find type `HashType` in this scope
  --> ../rust-bitcoin/primitives/src/hash_types/generic.rs:14:6
   |
14 | impl HashType {
   |      ^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `fmt`
  --> ../rust-bitcoin/primitives/src/hash_types/generic.rs:54:6
   |
54 | impl fmt::Debug for HashType {
   |      ^^^ use of unresolved module or unlinked crate `fmt`
   |
   = help: you might be missing a crate named `fmt`
help: consider importing this module
   |
10 + use std::fmt;
   |

error[E0425]: cannot find type `HashType` in this scope
  --> ../rust-bitcoin/primitives/src/hash_types/generic.rs:54:21
   |
54 | impl fmt::Debug for HashType {
   |                     ^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `fmt`
  --> ../rust-bitcoin/primitives/src/hash_types/generic.rs:55:27
   |
55 |     fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
   |                           ^^^ use of unresolved module or unlinked crate `fmt`
   |
   = help: you might be missing a crate named `fmt`
help: consider importing this module
   |
10 + use std::fmt;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `fmt`
  --> ../rust-bitcoin/primitives/src/hash_types/generic.rs:55:46
   |
55 |     fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
   |                                              ^^^ use of unresolved module or unlinked crate `fmt`
   |
   = help: you might be missing a crate named `fmt`
help: consider importing this module
   |
10 + use std::fmt;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hashes`
  --> ../rust-bitcoin/primitives/src/hash_types/generic.rs:10:30
   |
10 | const LEN: usize = <Inner as hashes::Hash>::LEN;
   |                              ^^^^^^ use of unresolved module or unlinked crate `hashes`
   |
   = help: you might be missing a crate named `hashes`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
